--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,14 +1,30 @@
-<div class="container">
-  <div class="row">
-      <div>Date</div>
-      <div>Humidity</div>
-      <div>Temperature(&deg;C)</div>
-      <div>Pressure(millibar)</div> 
-  </div>
-  <div *ngFor="let record of weatherData" class="row">
-    <div>{{ record.time | date: 'medium' }}</div>
-    <div>{{ record.sensor_h }}%</div>  
-    <div>{{ record.sensor_t }}</div>  
-    <div>{{ record.sensor_bp }}</div>  
-  </div>
-</div>
+<table mat-table [dataSource]="weatherData" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Position Column -->
+  <ng-container matColumnDef="readingTime">
+    <th mat-header-cell *matHeaderCellDef> Date</th>
+    <td mat-cell *matCellDef="let element"> {{element.readingTime}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="sensor_h">
+    <th mat-header-cell *matHeaderCellDef> Humidity</th>
+    <td mat-cell *matCellDef="let element"> {{element.sensor_h}} </td>
+  
+  </ng-container>
+  <ng-container matColumnDef="sensor_t">
+    <th mat-header-cell *matHeaderCellDef> Temp</th>
+    <td mat-cell *matCellDef="let element"> {{element.sensor_t}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="sensor_bp">
+    <th mat-header-cell *matHeaderCellDef> Pressure</th>
+    <td mat-cell *matCellDef="let element"> {{element.sensor_bp}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
