--- a/app/src/app/app.component.scss
+++ b/app/src/app/app.component.scss
@@ -1,14 +1,3 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    
-    .row{
-        flex: 1;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        >div{
-            flex: 4;
-        }
-    }
+table{
+    width: 100%;
 }
