--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,1 +1,6 @@
-<app-sensor-data-table></app-sensor-data-table>
+<div>
+  <header>
+    <h1>WeatherNerd</h1>
+  </header>
+  <app-sensor-data-table [temperatureUnit]="temperatureUnit"></app-sensor-data-table>
+</div>
