--- a/app/src/app/sensor-data/sensor-data.component.html
+++ b/app/src/app/sensor-data/sensor-data.component.html
@@ -1,31 +1,22 @@
 <table mat-table [dataSource]="weatherData" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
-  
-    <!-- Position Column -->
-    <ng-container matColumnDef="readingTime">
-      <th mat-header-cell *matHeaderCellDef>Date</th>
-      <td mat-cell *matCellDef="let element"> {{element.readingTime | date: 'medium'}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="sensor_h">
-      <th mat-header-cell *matHeaderCellDef>Humidity</th>
-      <td mat-cell *matCellDef="let element"> {{element.sensor_h}} </td>
-    
-    </ng-container>
-    <ng-container matColumnDef="sensor_t">
-      <th mat-header-cell *matHeaderCellDef>Temperature (&deg;{{temperatureUnit}})</th>
-      <td mat-cell *matCellDef="let element"> {{element.sensor_t}} </td>
-    </ng-container>
-  
-    <ng-container matColumnDef="sensor_bp">
-      <th mat-header-cell *matHeaderCellDef>Pressure</th>
-      <td mat-cell *matCellDef="let element"> {{element.sensor_bp}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  
-  
+  <ng-container matColumnDef="readingTime">
+    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <td mat-cell *matCellDef="let element"> {{element.readingTime | date: 'medium'}} </td>
+  </ng-container>
+  <ng-container matColumnDef="sensor_h">
+    <th mat-header-cell *matHeaderCellDef>Humidity (%)</th>
+    <td mat-cell *matCellDef="let element"> {{element.sensor_h}} </td>
+  </ng-container>
+  <ng-container matColumnDef="sensor_t">
+    <th mat-header-cell *matHeaderCellDef>Temperature (&deg;{{temperatureUnit}})</th>
+    <td mat-cell *matCellDef="let element"> {{element.sensor_t}} </td>
+  </ng-container>
+  <ng-container matColumnDef="sensor_bp">
+    <th mat-header-cell *matHeaderCellDef>Pressure (millibar)</th>
+    <td mat-cell *matCellDef="let element"> {{element.sensor_bp}} </td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
