--- a/app/src/app/features/weather-data-table/components/weather-data-table/sensor-data.component.html
+++ b/app/src/app/features/weather-data-table/components/weather-data-table/sensor-data.component.html
@@ -6,15 +6,15 @@
   </ng-container>
   <ng-container matColumnDef="sensor_h">
     <th mat-header-cell *matHeaderCellDef>Humidity (%)</th>
-    <td mat-cell *matCellDef="let element"> {{element.sensor_h}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.humidity}} </td>
   </ng-container>
   <ng-container matColumnDef="sensor_t">
     <th mat-header-cell *matHeaderCellDef>Temperature (&deg;{{temperatureUnit}})</th>
-    <td mat-cell *matCellDef="let element"> {{element.sensor_t}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.tempurature}} </td>
   </ng-container>
   <ng-container matColumnDef="sensor_bp">
     <th mat-header-cell *matHeaderCellDef>Pressure (millibar)</th>
-    <td mat-cell *matCellDef="let element"> {{element.sensor_bp}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.barametricPressure}} </td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
