hook up temperature conversion

--- a/app/src/app/app.component.scss
+++ b/app/src/app/app.component.scss
@@ -1,15 +1,15 @@
-.mat-drawer{
-    width: 25%;
+.mat-drawer {
+    width: 20%;
 }
 
-.settings-drawer{
-    h4{
+.settings-drawer {
+    h4 {
         text-align: center;
         margin-top: 16px;
-        font-family: 'Courier New', Courier, monospace;
+        font-family: "Courier New", Courier, monospace;
     }
-    
-    .temperature-unit-control{
+
+    .temperature-unit-control {
         margin: 16px;
     }
 }
