--- a/app/src/app/app.component.html
+++ b/app/src/app/app.component.html
@@ -1,17 +1,6 @@
 <mat-drawer-container autosize>
   <mat-drawer #drawer mode="over">
-    <div class="settings-drawer">
-      <h4>Weather Station #47</h4>
-      <mat-divider></mat-divider>
-      <mat-button-toggle-group #group="matButtonToggleGroup" value="F" class="temperature-unit-control">
-        <mat-button-toggle value="F" aria-label="Farenheit" (change)="onTemperatureUnitChange($event.value)">
-          &deg;F
-        </mat-button-toggle>
-        <mat-button-toggle value="C" aria-label="Celcius" (change)="onTemperatureUnitChange($event.value)">
-          &deg;C
-        </mat-button-toggle>
-      </mat-button-toggle-group> 
-    </div>
+    <app-menu></app-menu>
   </mat-drawer>
   <div>
     <mat-toolbar>
