wire up the store

--- a/app/src/app/pages/weather-dashboard-page/weather-dashboard-page.component.html
+++ b/app/src/app/pages/weather-dashboard-page/weather-dashboard-page.component.html
@@ -1,1 +1,1 @@
-<app-sensor-data-table [temperatureUnit]="'F'"></app-sensor-data-table>
+<app-sensor-data-table [temperatureUnit]="temperatureUnit"></app-sensor-data-table>
