open login dialog

--- a/app/src/app/features/menu/menu.component.html
+++ b/app/src/app/features/menu/menu.component.html
@@ -13,7 +13,7 @@
             </mat-button-toggle-group>
         </div>
         <div>
-            <button mat-raised-button color="primary">Login</button>
+            <button mat-raised-button color="primary" (click)="openLoginDialog()">Login</button>
         </div>
     </div>
 </div>
