--- a/app/src/app/features/weather-data-table/components/sensor-data/sensor-data.component.html
+++ b/app/src/app/features/weather-data-table/components/sensor-data/sensor-data.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="weatherData" class="mat-elevation-z8">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
   <ng-container matColumnDef="readingTime">
     <th mat-header-cell *matHeaderCellDef>Date</th>
@@ -10,7 +10,7 @@
   </ng-container>
   <ng-container matColumnDef="sensor_t">
     <th mat-header-cell *matHeaderCellDef>Temperature (&deg;{{temperatureUnit}})</th>
-    <td mat-cell *matCellDef="let element"> {{element.temperature  | convertTemperature: temperatureUnit}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.temperature | convertTemperature: temperatureUnit}} </td>
   </ng-container>
   <ng-container matColumnDef="sensor_bp">
     <th mat-header-cell *matHeaderCellDef>Pressure (millibar)</th>
@@ -20,3 +20,6 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+<mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+</mat-paginator>
